--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ form input {
   text-align: center;
 }
 
+.btn-box #submit {
+  background: #2c5f2d;
+}
+
 form button {
   width: 110px;
   height: 35px;
